# Modular-Multi-Agent-Orchestration-Framework

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
configs/: sequential_research.yaml
framework/: __init__.py
framework/agents/: base.py  context.py  registry.py
framework/agents/concrete/: stub.py
framework/memory/: artifacts.py  local.py  shared.py
framework/orchestration/: state.py  task.py
framework/orchestration/patterns/: base.py
framework/runtime/: loader.py
framework/tools/: base.py
framework/tools/builtin/: calculator.py  file_io.py  search.py
tests/unit/: test_patterns.py  test_state.py  test_tools.py
