[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "modular-agent-framework"
version = "0.1.0"
description = "Modular multi-agent orchestration framework"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "redis>=5.0.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-framework = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
